src/sponsors/Sponsors.scss
@import "../variables";

.sponsors {
    width: 90vw;
    margin: auto;
    .sponsors-list {
        padding-top: 10px;
        text-align: center;
        justify-content: space-evenly !important;
        flex-wrap: wrap;
        .sponsor {
            margin: auto;
            text-align: center;
            img {
                width: 25vw;
            }
        }
    }
    .panel-fit {
        margin: 1% auto;
        width: fit-content;
        background-color: $darkBlue;
        padding: 20px 15px;
        border-radius: 15px;
    }
    p {
        text-align: center;
    }
    a {
        text-decoration: none;
        color: $fontColor;
        font-weight: 600;
        transition: 0.3s;
        &:hover {
            color: $purple;
        }
    }
}

